Externalize AQL queries, refactoring and service for fetching taxon info.